corrected some minor bugs * sender host * side panel z-index value * task repeated created word * error in my tasks when no tasks

--- a/spam/public/themes/greentango/css/style.css
+++ b/spam/public/themes/greentango/css/style.css
@@ -617,7 +617,7 @@ th {
     padding: 0 0 0 10px;
     position: fixed;
     top: 15px;
-    z-index: 2;
+    z-index: 5;
     border-radius: 0 8px 8px 0;
     box-shadow: 0 0 10px #555555;
 }
@@ -944,16 +944,6 @@ ul.tabs a.current {
     float: left;
 }
 
-/*.asset_description_detailed {
-    background-color: white;
-    border-radius: 8px 8px 8px 8px;
-    float: right;
-    height: 100px;
-    padding: 15px;
-    width: 65%;
-    border: 1px solid #666666;
-}*/
-
 .short_assets table {
     border: 1px solid #bbbbbb;   
     -moz-border-radius: 8px;
@@ -988,9 +978,7 @@ ul.tabs a.current {
 .assetdescription {
 	background-color: #F5F5F5;
 	border-radius: 8px 8px 8px 8px;
-	/*float: right;*/
 	padding: 15px;
-	/*width: 800px;*/
 	border: 1px solid #666666;
 	min-width: 660px;
 	min-height: 300px;
@@ -1000,9 +988,7 @@ ul.tabs a.current {
 .maxithumbnail {
 	float: right;
 	width: 320px;
-	/*height: 180px;*/
 	padding: 10px 0 10px 0;
-	/*background-color: #EEEEEE;*/
 }
 .maxithumbnail img {
 	padding: 5px;
@@ -1016,7 +1002,6 @@ ul.tabs a.current {
 	float: left;
 	height: 180px;
 	padding: 10px;
-	/*width: 420px;*/
 	width: 44%;
 }
 
@@ -1026,20 +1011,14 @@ ul.tabs a.current {
 }
 
 .tasks {
-	clear: both;
-	/*width: 742px;*/
-	
+	clear: both;	
 	background-color: white;
-    /*border: 1px solid #DDDDDD;*/
     border-radius: 8px 8px 8px 8px;
-    /*overflow: hidden;*/
-    /*float: left;*/
     padding: 5px;
     margin: 5px 0;
 }
 
 .tasklist {
-	/*height: 255px;*/
 	border: 1px solid #666666;
 	background-color: #EEEEEE;
 }
@@ -1062,7 +1041,6 @@ ul.tabs a.current {
 
 .taskhead {
 	float: left;
-	/*width: 742px;*/
 	#padding: 7px 7px 7px 7px;
 	vertical-align: middle;
 	border-bottom-width: 2px;
@@ -1072,32 +1050,17 @@ ul.tabs a.current {
 
 .currenttaskbody {
 	clear: both;
-	/*width: 742px;*/
-	/*border-bottom-width: 2px;
-	border-bottom-style: solid;
-	border-bottom-color: #777777;*/
 	min-height: 75px;
-	/*padding: 10px 0;*/
 	background-color: #FFFFFF;
 	overflow: hidden;
 }
 .taskbody {
-	/*clear: left;*/
-	/*width: 742px;*/
-	/*border-bottom-width: 2px;
-	border-bottom-style: solid;
-	border-bottom-color: #777777;*/
 	min-height: 75px;
-	/*padding: 10px 0;*/
 	background-color: #FFFFFF;
-	/*overflow: hidden;*/
 	display: none;
 }
 
-
 .taskactions {
-	/*border: 1px solid #000000;*/
-	/*width: 85px;*/
 	height: 35px;
 	margin: 3px;
 	float: right;
@@ -1125,15 +1088,12 @@ ul.tabs a.current {
 
 .oldtasks {
     clear: both;
-    /*width: 742px;*/
 }
 .oldtaskname {
-	/*float: left;*/
 	font-size: 12px;
 	background-color: #CCCCCC;
     border-radius: 4px 4px 4px 4px;
     margin: 1px;
-    /*width: 722px;*/
     padding: 1px 10px 1px 10px;
 }
 
@@ -1149,9 +1109,7 @@ ul.tabs a.current {
 }
 
 .actionbody {
-	/*background-color: #FFFFFF;*/
 	margin-left: 35px;
-	/*padding: 3px;*/
 	clear: both;
 }
 
@@ -1163,8 +1121,6 @@ ul.tabs a.current {
 
 .actionheader {
 	font-size: 10px;
-	/*background-color: #EEEEEE;
-	padding: 3px;*/
 	float: right;
 }
 
@@ -1200,9 +1156,7 @@ ul.tabs a.current {
 .bibliaheader {
     border:  solid #DDDDDD;
     border-width: 1px 1px 0 1px;
-    /*background-color: #F5F5F5;*/
     border-radius: 8px 8px 0 0 ;
-    /*width: 1050px;*/
     height: 16px;
     padding:5px;
     text-align: right;
@@ -1216,8 +1170,6 @@ ul.tabs a.current {
     border-width: 0 1px 1px 1px;
     background-color: #F5F5F5;
     border-radius: 0 0 8px 8px;
-    /*width: 1050px;*/
-    /*height: 1485px;*/
     height: 485px;
     padding: 5px;
     overflow-y: auto;
